# lzfse_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
bench/: Cargo.toml  readme.md
bench/src/: lib.rs
examples/: compress.rs  compress_ring.rs  decompress.rs  decompress_ring.rs
lzfoo/: Cargo.toml  README.md  main.rs  readme.md
lzfse_sys/: Cargo.toml  README.md  build.rs
lzfse_sys/src/: lib.rs
scripts/: init_large.sh  lmdy.sh
src/: lib.rs
src/base/: magic_bytes.rs
src/bits/: accum.rs  as_bit_src.rs  bit_dst.rs  bit_mask.rs  bit_reader.rs  bit_src.rs  bit_writer.rs  byte_bits.rs  mod.rs
src/decode/: constants.rs  decoder.rs  mod.rs  reader_core.rs  ring_decoder.rs
src/encode/: backend.rs  constants.rs  dummy.rs  encoder.rs  frontend_bytes.rs  frontend_ring.rs  history.rs  match_object.rs  match_unit.rs  mod.rs  ring_encoder.rs  writer.rs  writer_bytes.rs
src/error/: mod.rs
src/fse/: backend.rs  block.rs  buffer.rs  decoder.rs  encoder.rs  error.rs  error_kind.rs  fse_core.rs  literals.rs  lmds.rs  mod.rs  object.rs  test.rs  test_fse.rs  weight_encoder.rs  weights.rs
src/kit/: wide.rs
src/lmd/: lmd_non_pack.rs  lmd_pack.rs  lmd_type.rs  mod.rs
src/lz/: object.rs  writer.rs
src/match_kit/: match_fast.rs
src/ops/: flush.rs  limit.rs  patch_into.rs  peek_data.rs  poke_data.rs  pos.rs  short_limit.rs  skip.rs  truncate.rs  write_short.rs
src/raw/: block.rs  tests.rs
src/ring/: mod.rs  object.rs  ring_bits.rs  ring_block.rs  ring_lz_writer.rs  ring_reader.rs  ring_short_writer.rs  ring_size.rs  ring_type.rs  ring_view.rs
src/test_utils/: lmds.rs
src/types/: byte_reader.rs  idx.rs  short_bytes.rs  short_len.rs  wide_bytes.rs  wide_bytes_mut.rs
src/vn/: backend.rs  block.rs  error.rs  error_kind.rs  mod.rs  object.rs  opc.rs  tests.rs  vn_core.rs
test/: Cargo.toml  README.md
test/src/: big_mem.rs  buddy.rs  data.rs  fuzz_read.rs  fuzz_write.rs  len.rs  lib.rs  monkey.rs  mutate_0.rs  mutate_1.rs  mutate_2.rs  mutate_3.rs  mutate_4.rs  mutate_5.rs  mutate_6.rs  mutate_7.rs  ops.rs  patchwork_0.rs  patchwork_1.rs  pattern_1.rs  pattern_2.rs  pattern_3.rs  pattern_4.rs  pattern_5.rs  pattern_6.rs  random_0.rs  random_1.rs  random_2.rs
test_kit/: Cargo.toml
test_kit/src/: cycle.rs  rng.rs  slices.rs
