[package]
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"] 
description = """
A pure Rust LZFSE library.
""" 
documentation = "https://docs.rs/lzfse_rust" 
edition = "2018" 
exclude = ["data/*", "scripts/*"] 
homepage = "https://github.com/shampoofactory/lzfse_rust" 
keywords = ["lzfse", "compress", "compression", "decompress", "decompression"] 
license = "MIT OR Apache-2.0" 
name = "lzfse_rust" 
readme = "README.md" 
repository = "https://github.com/shampoofactory/lzfse_rust" 
version = "0.1.0" # remember to update lzfooand READMEs

[workspace]
exclude = ["lzfse_sys"]
members = ["lzfoo", "bench", "test", "test_kit"]

[lib]
bench = false

[profile.test]
opt-level = 3

[dev-dependencies]
test_kit = {path = "test_kit"}
version-sync = "0.9.2"
