[package]
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
description = """
Criterion powered benchmarks for lzfse_rust crate.
"""
edition = "2018"
homepage = "https://github.com/shampoofactory/lzfse_rust"
license = "MIT OR Apache-2.0"
name = "lzfse-rust-bench"
publish = false
readme = "README.md"
repository = "https://github.com/shampoofactory/lzfse_rust"
version = "0.2.0"

[lib]
bench = false

[[bench]]
harness = false
name = "lzfse_rust"
path = "src/bench.rs"

[features]
lzfse_ref = ["lzfse_sys"]

[dependencies]
criterion = "0.3.4"
lzfse_rust = {path = ".."}
lzfse_sys = {path = "../lzfse_sys", optional = true}
