[package]
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
description = """
A pure Rust LZFSE command line tool.
"""
documentation = "https://docs.rs/lzfoo"
edition = "2018"
homepage = "https://github.com/shampoofactory/lzfse_rust/tree/main/lzfoo"
keywords = ["lzfse", "compress", "compression", "decompress", "decompression"]
license = "MIT OR Apache-2.0"
name = "lzfoo"
readme = "README.md"
repository = "https://github.com/shampoofactory/lzfse_rust/tree/main/lzfoo"
version = "0.2.0"

[[bin]]
name = "lzfoo"
path = "main.rs"

[dependencies]
lzfse_rust = {path = "..", version = "0.2.0"}

[dependencies.clap]
default-features = false
version = "2.33.0"
