[package]
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
description = """
Rust lzfse reference bindings.
"""
edition = "2018"
homepage = "https://github.com/shampoofactory/lzfse_rust"
license = "MIT OR Apache-2.0"
links = "lzfse"
name = "lzfse_sys"
publish = false
readme = "README.md"
repository = "https://github.com/shampoofactory/lzfse_rust"
version = "0.2.0"

[dependencies]
libc = "0.2.88"
