[package]
publish = false
name = "test"
version = "0.1.0"
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
description = """
Tests for lzfse_rust crate.
"""
license = "MIT OR Apache-2.0"
homepage = "https://github.com/shampoofactory/lzfse_rust"
repository = "https://github.com/shampoofactory/lzfse_rust"
readme = "README.md"
edition = "2018"

[features]
lzfse_ref = ["lzfse_sys"]
large_data = []
huge_data = []

[dependencies]
lzfse_sys = { path = "../lzfse_sys", optional = true }

[dev-dependencies]
sha2 = "0.9.3"
lzfse_rust = { path = ".." }
test_kit = { path = "../test_kit" }
