[package]
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
description = """
Tests for lzfse_rust crate.
"""
edition = "2018"
homepage = "https://github.com/shampoofactory/lzfse_rust"
license = "MIT OR Apache-2.0"
name = "test"
publish = false
readme = "README.md"
repository = "https://github.com/shampoofactory/lzfse_rust"
version = "0.1.0"

[features]
big_mem = []
huge_data = []
large_data = []
lzfse_ref = ["lzfse_sys"]

[dependencies]
lzfse_sys = {path = "../lzfse_sys", optional = true}

[dev-dependencies]
lzfse_rust = {path = ".."}
sha2 = "0.9.3"
test_kit = {path = "../test_kit"}
