[package]
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
description = """
Testing utility functions for lzfse_rust crate.
"""
edition = "2018"
homepage = "https://github.com/shampoofactory/lzfse_rust"
license = "MIT OR Apache-2.0"
name = "test_kit"
publish = false
readme = "README.md"
repository = "https://github.com/shampoofactory/lzfse_rust"
version = "0.2.0"
